infrastructure/charts/grafana/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: grafana-auth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.poddle.uz`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
      middlewares:
        - name: grafana-auth
  tls:
    secretName: wildcard-poddle-uz-tls
---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: grafana-auth
#   namespace: monitoring
# spec:
#   basicAuth:
#     secret: grafana-auth
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: grafana
#   namespace: monitoring
#   annotations:
#     cert-manager.io/cluster-issuer: "vault-k8s-ci"
#     traefik.ingress.kubernetes.io/router.entrypoints: websecure
#     traefik.ingress.kubernetes.io/router.tls: "true"
#     traefik.ingress.kubernetes.io/router.middlewares: monitoring-grafana-auth@kubernetescrd
# spec:
#   ingressClassName: traefik
#   tls:
#     - hosts:
#         - grafana.poddle.uz
#       # secretName: grafana-tls
#       secretName: wildcard-poddle-uz-tls
#   rules:
#     - host: grafana.poddle.uz
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: prometheus-grafana
#                 port:
#                   number: 80
