infrastructure/charts/grafana/grafana-ingressroute.yaml
# apiVersion: v1
# kind: Secret
# metadata:
#   name: grafana-auth-secret
#   namespace: monitoring
# type: kubernetes.io/basic-auth
# stringData:
#   username: admin
#   password: "1213"
# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: grafana-auth-middleware
#   namespace: monitoring
# spec:
#   basicAuth:
#     secret: grafana-auth-secret
# ---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: grafana
spec:
  entryPoints: []
    # If not specified, HTTP routers will accept requests from all EntryPoints in the list of default EntryPoints.
    # - web
    # - websecure
  routes:
    - match: Host(`grafana.poddle.uz`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  # tls:
  #   secretName: wildcard-tls-secret
